# ark-elliptic-curve-groups

./: Cargo.toml  README.md  build.rs
src/: group.rs  lib.rs  scalar.rs  tests.rs
